--- a/gui/frontend/src/styles.scss
+++ b/gui/frontend/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    background-color: #ffffff;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
