Added downloadInParallel checkbox in the advanced settings section.

--- a/gui/frontend/src/app/app.component.html
+++ b/gui/frontend/src/app/app.component.html
@@ -109,6 +109,12 @@
           </div>
           <div class="setting-item">
             <label class="checkbox-label">
+              <input type="checkbox" [(ngModel)]="downloadInParallel" class="setting-checkbox">
+              Download In Parallel
+            </label>
+          </div>
+          <div class="setting-item">
+            <label class="checkbox-label">
               <input type="checkbox" [(ngModel)]="skipExisting" class="setting-checkbox">
               Skip Existing
             </label>
