--- a/gui/frontend/src/app/app.component.html
+++ b/gui/frontend/src/app/app.component.html
@@ -51,6 +51,10 @@
           <span class="material-icons-outlined">file_download</span>
           Fetch Files
         </button>
+        <button (click)="onCancelDownload()" class="fetch-btn cancel-btn">
+          <span class="material-icons-outlined">cancel</span>
+          Cancel
+        </button>
       </div>
     </div>
 
