Redesign download card progress ring

--- a/gui/frontend/src/app/components/download-card/download-card.component.html
+++ b/gui/frontend/src/app/components/download-card/download-card.component.html
@@ -1,42 +1,41 @@
-<div class="source-card" [attr.data-status]="series.status">
+<div class="download-card" [attr.data-status]="series.status">
   <div class="card-header">
-    <div class="card-title" [title]="series.seriesDescription || series.seriesUID">
-      {{ series.seriesDescription || series.seriesUID }}
+    <div class="card-title-group">
+      <div class="card-title" [title]="title">{{ title }}</div>
+      <div *ngIf="subtitle" class="card-subtitle" [title]="subtitle">{{ subtitle }}</div>
     </div>
-    <span class="status-chip" [ngClass]="'status-' + series.status">
-      {{ statusLabel }}
-    </span>
+    <span class="status-chip" [ngClass]="'status-' + series.status">{{ statusLabel }}</span>
   </div>
 
-  <div class="card-meta">
-    <span *ngIf="series.subjectID" class="meta-item" [title]="series.subjectID">
-      <span class="material-icons-outlined meta-icon">person</span>
-      {{ series.subjectID }}
-    </span>
-    <span *ngIf="series.seriesUID" class="meta-item" [title]="series.seriesUID">
-      <span class="material-icons-outlined meta-icon">qr_code_2</span>
-      {{ series.seriesUID }}
-    </span>
-    <span *ngIf="series.modality" class="meta-item" [title]="series.modality">
-      <span class="material-icons-outlined meta-icon">biotech</span>
-      {{ series.modality }}
-    </span>
-  </div>
-
-  <div class="progress-row">
-    <div class="progress-bar">
-      <div class="progress-fill" [style.width.%]="progressValue"></div>
+  <div class="card-body">
+    <div class="progress-shell">
+      <div
+        class="progress-ring"
+        [style.--value]="progressValue"
+        [style.--accent]="accentColor"
+        [attr.aria-label]="progressLabel"
+        role="img"
+      >
+        <div class="progress-ring__inner">
+          <div class="progress-ring__content">
+            <span *ngIf="showPauseIcon" class="material-icons progress-ring__icon">pause</span>
+            <span class="progress-ring__percent">{{ progressValue }}%</span>
+          </div>
+        </div>
+      </div>
+      <div class="progress-caption">{{ statusLabel }}</div>
     </div>
-    <div class="progress-label">{{ progressLabel }}</div>
-  </div>
 
-  <div class="log-container" *ngIf="hasLogs; else emptyState">
-    <div class="log-line" *ngFor="let line of logLines">{{ line }}</div>
-    <div *ngIf="series.errorMessage" class="log-line error" [title]="series.errorMessage">
-      {{ series.errorMessage }}
+    <div class="card-output">
+      <ng-container *ngIf="hasLogs; else emptyState">
+        <div class="log-line" *ngFor="let line of logLines">{{ line }}</div>
+        <div *ngIf="series.errorMessage" class="log-line error" [title]="series.errorMessage">
+          {{ series.errorMessage }}
+        </div>
+      </ng-container>
+      <ng-template #emptyState>
+        <div class="log-placeholder">Waiting for updates…</div>
+      </ng-template>
     </div>
   </div>
-  <ng-template #emptyState>
-    <div class="log-placeholder">Waiting for updates…</div>
-  </ng-template>
 </div>
